png not visible when two line ticks used fixed chart not shrinking when resizing down fixed added workflows folder for testing GitHub actions

--- a/src/style.css
+++ b/src/style.css
@@ -291,7 +291,7 @@ p {
 }
 
 #upcoming-hours-container {
-  display: grid;
+  overflow: auto;
   margin: 30px;
   padding: 30px;
   background-color: white;
